--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <ul>
             <li>Mini Section Designer permite hacer un análisis seccional unidireccional sencillo.</li>
             <li>Se pueden definir modelos de materiales de hormigón (Hognestad) y acero (Mander).</li>
-            <li>Se construye una sección en base a areas de hormigón y areas concetradas de acero.</li>
+            <li>Se construye una sección en base a areas de hormigón y areas concentradas de acero.</li>
             <li>El análisis es unidireccional en sentido de izquierda a derecha. Se comprime el lado derecho de la sección y se tracciona el lado izquierdo.</li>
             <li>Se puede visualizar e interactuar con el diagrama momento-curvatura.</li>
             <li>En base a la curvatura elegida, se actualiza el perfil de deformaciones, de tensiones del hormigón y de tensiones del acero.</li>
