--- a/index.html
+++ b/index.html
@@ -168,8 +168,11 @@
         </div>
       </div>
       <div class="card">
-        <h2 class="title">6. Diagrama de Interacción</h2>
-        <svg width="250" height="150" id="interaction-diagram-svg"></svg>
+        <div>
+          <h2 class="title">6. Diagrama de Interacción</h2>
+          <svg width="250" height="200" id="interaction-diagram-svg"></svg>
+        </div>
+
       </div>
     </div>
   </div>
