--- a/index.html
+++ b/index.html
@@ -170,7 +170,49 @@
       <div class="card">
         <div>
           <h2 class="title">6. Diagrama de Interacción</h2>
-          <svg width="250" height="200" id="interaction-diagram-svg"></svg>
+          <label class="switch">
+            <input type="checkbox" v-model="switchState" @change="toggleSwitch">
+            <span class="slider round"></span>
+          </label>
+          <svg width="250" height="170" id="interaction-diagram-svg"></svg>
+          <h4>6.1 Tabla del diagrama de interacción</h4>
+          <table>
+            <thead style="font-size: 14px;">
+              <th>Pn</th>
+              <th>Mn</th>
+            </thead>
+            <thead class="table-header">
+              <td><small>tonf</small></td>
+              <td><small>tonf-m</small></td>
+            </thead>
+            <tr style="font-size: 12px;" v-for="interaction_points in interaction">
+              <td>{{interaction_points.y.toFixed(2)}}</td>
+              <td>{{interaction_points.x.toFixed(2)}}</td>
+            </tr>
+          </table>
+          <h4>6.2 Puntos de demanda</h4>
+          <table>
+            <thead style="font-size: 14px;">
+              <th>Pu</th>
+              <th>Mu</th>
+              <th></th>
+            </thead>
+            <thead>
+              <td><small>tonf</small></td>
+              <td><small>tonf-m</small></td>
+              <td></td>
+            </thead>
+            <tr class="table-header">
+              <td><input v-model="input.Pu" type="text" class="full-width"></td>
+              <td><input v-model="input.Mu" type="text" class="full-width"></td>
+              <td><a class="btn" @click="add_steel"><i class="fa-sharp fa-solid fa-plus"></i></a></td>
+            </tr>
+            <tr style="font-size: 12px;" v-for="interaction_points in interaction">
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+          </table>
         </div>
 
       </div>
